--- a/NexuSeguros/src/main/java/com/mycompany/nexuseguros/dashboardAgente.form
+++ b/NexuSeguros/src/main/java/com/mycompany/nexuseguros/dashboardAgente.form
@@ -48,7 +48,10 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="header" max="32767" attributes="0"/>
-                      <Component id="contentAgente" max="32767" attributes="0"/>
+                      <Group type="102" attributes="0">
+                          <Component id="contentAgente" max="32767" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                      </Group>
                   </Group>
               </Group>
           </Group>
@@ -58,8 +61,9 @@
               <Component id="menu" max="32767" attributes="0"/>
               <Group type="102" attributes="0">
                   <Component id="header" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
+                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Component id="contentAgente" max="32767" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
